test/fails/bad_tags/assign5.lgl
tag a is vec2;
tag b is vec3;

void main() {
    b->vec2 x = [[1., 1.], [1., 1.], [1., 1.]]; // Bad downcast
}